## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/hex2t

pkgdata_DATA =          \
	grid.png	\
	grid.spec	\
	items.png	\
	items.spec	\
	overlays.png	\
	overlays.spec	\
	select.png	\
	select.spec	\
	tiles.png	\
	tiles.spec

EXTRA_DIST = $(pkgdata_DATA)
