## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/misc

pkgdata_DATA =          \
	buildings.png	\
	buildings.spec	\
	chiefs.png	\
	chiefs.spec	\
	citybar.png	\
	citybar.spec	\
	cityicon.png	\
	civicon.png	\
	colors.png	\
	colors.spec	\
	colors.tilespec \
	cursors.png	\
	cursors.spec	\
	editor.png	\
	editor.spec	\
	flags.spec	\
	icons.spec	\
	intro.png	\
	overlays.png	\
	overlays.spec	\
	radar.png	\
	shields.spec	\
	small.png	\
	small.spec	\
	space.png	\
	space.spec	\
	techs.png	\
	techs.spec	\
	treaty.png	\
	treaty.spec

EXTRA_DIST = $(pkgdata_DATA)
