## Process this file with automake to produce Makefile.in
# Note: After adding a new nation file, 'make Makefile.am'

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/nation

pkgdata_DATA = \
		aborigines.ruleset \
		afghani.ruleset \
		ainu.ruleset \
		akwe.ruleset \
		algerian.ruleset \
		american.ruleset \
		antarctican.ruleset \
		arab.ruleset \
		aramean.ruleset \
		argentine.ruleset \
		armenian.ruleset \
		assyrian.ruleset \
		australian.ruleset \
		austrian.ruleset \
		aymara.ruleset \
		azeri.ruleset \
		aztec.ruleset \
		babylonian.ruleset \
		barbarian.ruleset \
		basque.ruleset \
		bavarian.ruleset \
		belarusian.ruleset \
		belgian.ruleset \
		bengali.ruleset \
		boer.ruleset \
		bosnia.ruleset \
		brazilian.ruleset \
		breton.ruleset \
		british.ruleset \
		bulgarian.ruleset \
		burgundian.ruleset \
		burmese.ruleset \
		burundi.ruleset \
		byzantium.ruleset \
		cambodian.ruleset \
		canadian.ruleset \
		carthaginian.ruleset \
		catalan.ruleset \
		cherokee.ruleset \
		chilean.ruleset \
		chinese.ruleset \
		chola.ruleset \
		colombian.ruleset \
		confederate.ruleset \
		cornish.ruleset \
		cree.ruleset \
		croatian.ruleset \
		cuban.ruleset \
		czech.ruleset \
		danish.ruleset \
		dominican.ruleset \
		dutch.ruleset \
		egyptian.ruleset \
		emirati.ruleset \
		english.ruleset \
		esperant.ruleset \
		estonian.ruleset \
		ethiopian.ruleset \
		european.ruleset \
		filipino.ruleset \
		finnish.ruleset \
		french.ruleset \
		galician.ruleset \
		gallic.ruleset \
		georgian.ruleset \
		german.ruleset \
		greek.ruleset \
		gupta.ruleset \
		hacker.ruleset \
		hawaiian.ruleset \
		hellenic.ruleset \
		himyarite.ruleset \
		hittite.ruleset \
		hopi.ruleset \
		hungarian.ruleset \
		icelandic.ruleset \
		illyrian.ruleset \
		inca.ruleset \
		indian.ruleset \
		indonesian.ruleset \
		inuit.ruleset \
		iranian.ruleset \
		iraqi.ruleset \
		irish.ruleset \
		iroquois.ruleset \
		israeli.ruleset \
		italian.ruleset \
		japanese.ruleset \
		kanem-bornu.ruleset \
		kazakh.ruleset \
		kenyan.ruleset \
		khwarezmian.ruleset \
		kongo.ruleset \
		korean.ruleset \
		kurd.ruleset \
		kyrgyz.ruleset \
		lankese.ruleset \
		laotian.ruleset \
		latvian.ruleset \
		libyan.ruleset \
		lithuanian.ruleset \
		lojbanistani.ruleset \
		majapahit.ruleset \
		malagasy.ruleset \
		malaysian.ruleset \
		malian.ruleset \
		manchu.ruleset \
		maori.ruleset \
		mapuche.ruleset \
		martian.ruleset \
		mayan.ruleset \
		mexican.ruleset \
		moldovan.ruleset \
		mongol.ruleset \
		muskogee.ruleset \
		newzealand.ruleset \
		nigerian.ruleset \
		norman.ruleset \
		northkorean.ruleset \
		norwegian.ruleset \
		nubian.ruleset \
		numidian.ruleset \
		nuu-chah-nulth.ruleset \
		ottoman.ruleset \
		pakistani.ruleset \
		papuan.ruleset \
		persian.ruleset \
		peruvian.ruleset \
		phoenician.ruleset \
		pirate.ruleset \
		polish.ruleset \
		polynesian.ruleset \
		portuguese.ruleset \
		prussian.ruleset \
		purhepecha.ruleset \
		quebecois.ruleset \
		romanian.ruleset \
		roman.ruleset \
		russian.ruleset \
		rwandan.ruleset \
		ryukyuan.ruleset \
		sami.ruleset \
		samogitian.ruleset \
		saxon.ruleset \
		scottish.ruleset \
		serbian.ruleset \
		silesian.ruleset \
		singaporean.ruleset \
		sioux.ruleset \
		slovakian.ruleset \
		slovenian.ruleset \
		southafrican.ruleset \
		southkorean.ruleset \
		soviet.ruleset \
		spanish.ruleset \
		srivijaya.ruleset \
		sudanese.ruleset \
		sumerian.ruleset \
		swazi.ruleset \
		swedish.ruleset \
		swiss.ruleset \
		syrian.ruleset \
		taino.ruleset \
		tairona.ruleset \
		taiwanese.ruleset \
		tajik.ruleset \
		templar.ruleset \
		texan.ruleset \
		thai.ruleset \
		thracian.ruleset \
		tibetan.ruleset \
		tocharian.ruleset \
		tunisian.ruleset \
		tupi.ruleset \
		turkmen.ruleset \
		turk.ruleset \
		ukrainian.ruleset \
		un.ruleset \
		uruguayan.ruleset \
		uyghur.ruleset \
		uzbek.ruleset \
		venezuelan.ruleset \
		vietnamese.ruleset \
		viking.ruleset \
		welsh.ruleset \
		westphalian.ruleset \
		zulu.ruleset 

EXTRA_DIST = $(pkgdata_DATA) Makefile.am.sh

