## Process this file with automake to produce Makefile.in
# Note: After adding a new nation file, 'make Makefile.am'

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/nation

pkgdata_DATA = \
		abkhaz.ruleset \
		aborigines.ruleset \
		abyssinian.ruleset \
		acadian.ruleset \
		acehnese.ruleset \
		afghani.ruleset \
		ainu.ruleset \
		akwe.ruleset \
		alandalus.ruleset \
		alander.ruleset \
		albanian.ruleset \
		aleut.ruleset \
		algerian.ruleset \
		alsatian.ruleset \
		amazigh.ruleset \
		amazonian.ruleset \
		american.ruleset \
		andorran.ruleset \
		angolan.ruleset \
		anishinaabe.ruleset \
		antarctican.ruleset \
		antillean.ruleset \
		apache.ruleset \
		arab.ruleset \
		aragonese.ruleset \
		aramean.ruleset \
		argentine.ruleset \
		armenian.ruleset \
		ashanti.ruleset \
		assamese.ruleset \
		assyrian.ruleset \
		asturian.ruleset \
		atlantean.ruleset \
		australian.ruleset \
		austrian.ruleset \
		aymara.ruleset \
		azeri.ruleset \
		aztec.ruleset \
		babylonian.ruleset \
		badian.ruleset \
		bangladeshi.ruleset \
		barbarian.ruleset \
		bashkir.ruleset \
		basque.ruleset \
		bavarian.ruleset \
		belarusian.ruleset \
		belgian.ruleset \
		belizean.ruleset \
		bengali.ruleset \
		benin.ruleset \
		beninese.ruleset \
		bhutanese.ruleset \
		biafran.ruleset \
		boer.ruleset \
		bolivian.ruleset \
		bosnia.ruleset \
		bosporan.ruleset \
		brandenburgian.ruleset \
		brazilian.ruleset \
		breton.ruleset \
		briton.ruleset \
		british.ruleset \
		bulgarian.ruleset \
		burgundian.ruleset \
		burkinabe.ruleset \
		burmese.ruleset \
		burundi.ruleset \
		buryat.ruleset \
		byzantium.ruleset \
		californian.ruleset \
		cambodian.ruleset \
		cameroonian.ruleset \
		canadian.ruleset \
		carthaginian.ruleset \
		castilian.ruleset \
		catalan.ruleset \
		celtiberian.ruleset \
		centralafrican.ruleset \
		centralamerican.ruleset \
		chadian.ruleset \
		cham.ruleset \
		chananean.ruleset \
		chechen.ruleset \
		cherokee.ruleset \
		chilean.ruleset \
		chimu.ruleset \
		chinese.ruleset \
		chinook.ruleset \
		chola.ruleset \
		chumash.ruleset \
		colombian.ruleset \
		comanche.ruleset \
		confederate.ruleset \
		congolese.ruleset \
		congolesebrazzaville.ruleset \
		cornish.ruleset \
		corsican.ruleset \
		cossack.ruleset \
		costarican.ruleset \
		cree.ruleset \
		crimeantatar.ruleset \
		croatian.ruleset \
		cuban.ruleset \
		curonian.ruleset \
		cypriot.ruleset \
		czech.ruleset \
		czechoslovak.ruleset \
		dahomean.ruleset \
		danish.ruleset \
		dominican.ruleset \
		dominicano.ruleset \
		dryad.ruleset \
		dutch.ruleset \
		eastgerman.ruleset \
		easttimorese.ruleset \
		ecuadorian.ruleset \
		egyptian.ruleset \
		egyptianarab.ruleset \
		elamite.ruleset \
		emirati.ruleset \
		english.ruleset \
		epirote.ruleset \
		equatoguinean.ruleset \
		esperant.ruleset \
		estonian.ruleset \
		eritrean.ruleset \
		ethiopian.ruleset \
		etruscan.ruleset \
		european.ruleset \
		evenki.ruleset \
		faroese.ruleset \
		fijian.ruleset \
		filipino.ruleset \
		finnish.ruleset \
		flemish.ruleset \
		florentine.ruleset \
		franconian.ruleset \
		french.ruleset \
		frisian.ruleset \
		friulian.ruleset \
		gabonese.ruleset \
		gaelic.ruleset \
		galician.ruleset \
		gallic.ruleset \
		gambian.ruleset \
		genoese.ruleset \
		georgian.ruleset \
		german.ruleset \
		ghana.ruleset \
		ghanaian.ruleset \
		gokturk.ruleset \
		greaterpolish.ruleset \
		greek.ruleset \
		greenlander.ruleset \
		grenadian.ruleset \
		guanche.ruleset \
		guarani.ruleset \
		guatemalan.ruleset \
		guinean.ruleset \
		gupta.ruleset \
		guyanese.ruleset \
		hacker.ruleset \
		haitian.ruleset \
		hanoverian.ruleset \
		han.ruleset \
		hansa.ruleset \
		hasinay.ruleset \
		hawaiian.ruleset \
		hellenic.ruleset \
		helvetian.ruleset \
		hessian.ruleset \
		himyarite.ruleset \
		hittite.ruleset \
		holyroman.ruleset \
		holysee.ruleset \
		honduran.ruleset \
		hopi.ruleset \
		hungarian.ruleset \
		iberian.ruleset \
		icelandic.ruleset \
		illyrian.ruleset \
		inca.ruleset \
		indian.ruleset \
		indonesian.ruleset \
		inuit.ruleset \
		iranian.ruleset \
		iraqi.ruleset \
		irish.ruleset \
		iroquois.ruleset \
		israeli.ruleset \
		israelite.ruleset \
		italian.ruleset \
		ivoirian.ruleset \
		jaffna.ruleset \
		jamaican.ruleset \
		japanese.ruleset \
		jolof.ruleset \
		jordanian.ruleset \
		kalmyk.ruleset \
		kanem-bornu.ruleset \
		karabakhi.ruleset \
		karelian.ruleset \
		karen.ruleset \
		kashmiri.ruleset \
		kashubian.ruleset \
		katangan.ruleset \
		kazakh.ruleset \
		kenyan.ruleset \
		khazar.ruleset \
		khmer.ruleset \
		khwarezmian.ruleset \
		kongo.ruleset \
		korean.ruleset \
		kosovar.ruleset \
		kuna.ruleset \
		kurd.ruleset \
		kuwaiti.ruleset \
		kyrgyz.ruleset \
		lankese.ruleset \
		laotian.ruleset \
		latvian.ruleset \
		lebanese.ruleset \
		lendian.ruleset \
		leonese.ruleset \
		liberian.ruleset \
		libyan.ruleset \
		liechtensteiner.ruleset \
		lippe.ruleset \
		lipkatatar.ruleset \
		lithuanian.ruleset \
		lojbanistani.ruleset \
		lorrain.ruleset \
		luxembourgish.ruleset \
		maasai.ruleset \
		macedon.ruleset \
		macedonian.ruleset \
		majapahit.ruleset \
		malagasy.ruleset \
		malawian.ruleset \
		malaysian.ruleset \
		mali.ruleset \
		malian.ruleset \
		maltese.ruleset \
		manchu.ruleset \
		manx.ruleset \
		maori.ruleset \
		mapuche.ruleset \
		martian.ruleset \
		mauritanian.ruleset \
		mayan.ruleset \
		mazovian.ruleset \
		mecklenburgian.ruleset \
		metis.ruleset \
		mexican.ruleset \
		miao.ruleset \
		micronesian.ruleset \
		mikmaq.ruleset \
		milanese.ruleset \
		miskito.ruleset \
		mitanni.ruleset \
		mixtec.ruleset \
		moldovan.ruleset \
		moluccan.ruleset \
		mon.ruleset \
		monegasque.ruleset \
		mongol.ruleset \
		montenegrin.ruleset \
		moravian.ruleset \
		mordvin.ruleset \
		moroccan.ruleset \
		mosotho.ruleset \
		motswana.ruleset \
		mozambican.ruleset \
		mughal.ruleset \
		muskogee.ruleset \
		muscovite.ruleset \
		mwiska.ruleset \
		namibian.ruleset \
		navajo.ruleset \
		neapolitan.ruleset \
		nenets.ruleset \
		nepali.ruleset \
		nestorian.ruleset \
		newfoundland.ruleset \
		newzealand.ruleset \
		nicaraguan.ruleset \
		nigerian.ruleset \
		nigerien.ruleset \
		nimiipuu.ruleset \
		norman.ruleset \
		northkorean.ruleset \
		northumbrian.ruleset \
		norwegian.ruleset \
		nubian.ruleset \
		numidian.ruleset \
		nuu-chah-nulth.ruleset \
		occitan.ruleset \
		ohlone.ruleset \
		oldenburgian.ruleset \
		oldprussian.ruleset \
		omani.ruleset \
		otomi.ruleset \
		ossetian.ruleset \
		ostrogothic.ruleset \
		ottoman.ruleset \
		ozite.ruleset \
		pakistani.ruleset \
		palatinate.ruleset \
		palestinian.ruleset \
		palmyrene.ruleset \
		panamanian.ruleset \
		papuan.ruleset \
		papuanewguinean.ruleset \
		paraguayan.ruleset \
		pashtun.ruleset \
		persian.ruleset \
		peruvian.ruleset \
		phoenician.ruleset \
		pictish.ruleset \
		piedmontese.ruleset \
		pirate.ruleset \
		polish.ruleset \
		polynesian.ruleset \
		portuguese.ruleset \
		prussian.ruleset \
		puertorican.ruleset \
		purhepecha.ruleset \
		qatari.ruleset \
		quebecois.ruleset \
		raramuri.ruleset \
		rhenish.ruleset \
		riffian.ruleset \
		riograndense.ruleset \
		romanian.ruleset \
		roman.ruleset \
		russian.ruleset \
		ruthenian.ruleset \
		rwandan.ruleset \
		ryukyuan.ruleset \
		sahrawi.ruleset \
		saka.ruleset \
		salishan.ruleset \
		salvadoran.ruleset \
		sami.ruleset \
		sammarinese.ruleset \
		samogitian.ruleset \
		sardinian.ruleset \
		sarmatian.ruleset \
		saudi.ruleset \
		savoyard.ruleset \
		saxon.ruleset \
		scanian.ruleset \
		schleswig-holsteinian.ruleset \
		scottish.ruleset \
		scythian.ruleset \
		seleucid.ruleset \
		seljuk.ruleset \
		senegalese.ruleset \
		serbian.ruleset \
		shan.ruleset \
		shawnee.ruleset \
		siberian.ruleset \
		sicilian.ruleset \
		sierraleonean.ruleset \
		sikh.ruleset \
		sikkimese.ruleset \
		silesian.ruleset \
		singaporean.ruleset \
		sinhalese.ruleset \
		sioux.ruleset \
		slavic.ruleset \
		slovakian.ruleset \
		slovenian.ruleset \
		somali.ruleset \
		songhai.ruleset \
		sorbian.ruleset \
		southafrican.ruleset \
		southamerican.ruleset \
		southkorean.ruleset \
		southsudanese.ruleset \
		southvietnamese.ruleset \
		southyemeni.ruleset \
		soviet.ruleset \
		spanish.ruleset \
		srivijaya.ruleset \
		sudanese.ruleset \
		sumerian.ruleset \
		surinamese.ruleset \
		swazi.ruleset \
		swedish.ruleset \
		swiss.ruleset \
		syrian.ruleset \
		taino.ruleset \
		tairona.ruleset \
		taiwanese.ruleset \
		tajik.ruleset \
		tanzanian.ruleset \
		tatar.ruleset \
		templar.ruleset \
		teutonic.ruleset \
		texan.ruleset \
		thai.ruleset \
		thracian.ruleset \
		thuringian.ruleset \
		tibetan.ruleset \
		timurid.ruleset \
		tocharian.ruleset \
		togolese.ruleset \
		toltec.ruleset \
		tongan.ruleset \
		transnistrian.ruleset \
		transylvanian.ruleset \
		trinidadian.ruleset \
		tunisian.ruleset \
		tupi.ruleset \
		turkmen.ruleset \
		turk.ruleset \
		turkishcypriot.ruleset \
		tuvan.ruleset \
		tyrolian.ruleset \
		ugandan.ruleset \
		ukrainian.ruleset \
		un.ruleset \
		uruguayan.ruleset \
		uyghur.ruleset \
		uzbek.ruleset \
		vampire.ruleset \
		vandalic.ruleset \
		vedic.ruleset \
		venetian.ruleset \
		venezuelan.ruleset \
		vermont.ruleset \
		vietnamese.ruleset \
		viking.ruleset \
		vincentian.ruleset \
		visigothic.ruleset \
		vistulan.ruleset \
		volgabulgar.ruleset \
		walloon.ruleset \
		welsh.ruleset \
		werewolf.ruleset \
		westernpomeranian.ruleset \
		westernroman.ruleset \
		westindian.ruleset \
		westphalian.ruleset \
		wuerttembergian.ruleset \
		xhosa.ruleset \
		yakut.ruleset \
		yemeni.ruleset \
		yucatecan.ruleset \
		yugoslav.ruleset \
		zambian.ruleset \
		zanzibari.ruleset \
		zapotec.ruleset \
		zhuang.ruleset \
		zimbabwean.ruleset \
		zulu.ruleset 

EXTRA_DIST = $(pkgdata_DATA) Makefile.am.sh

